<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25sp"
            android:paddingVertical="15sp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1
">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/giornoOb"
                        android:text="@string/giorno"
                        android:textColor="@color/black"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/meseOb"
                        android:text="@string/meseOb"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/walk_outline"
                    android:paddingRight="5sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/passiOb"
                        android:text="@string/passiOggi"
                        android:textColor="@color/black"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/obiettivoOb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suPassiOb"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3"
                android:gravity="center">
                <TextView
                    android:id="@+id/kmOb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kmEtichetta"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/route_outline"
                    android:drawablePadding="2sp"
                    android:textColor="@color/black"
                    android:paddingBottom="5sp"/>
                <TextView
                    android:id="@+id/kcalOb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kcalEtichetta"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/fire_outline"
                    android:drawablePadding="2sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/checkOb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check_circle"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:paddingLeft="15sp"
                    android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorSecondary" />
    </LinearLayout>
</FrameLayout>